crates/rpkl-runtime/tests/snapshots/snapshot_tests__multiline_string_custom_delimiter.snap
---
source: crates/rpkl-runtime/tests/snapshot_tests.rs
expression: eval_pkl_result(source)
---
Parse error: Syntax error:  --> 2:14
  |
2 |         r1 = #"""
  |              ^---
  |
  = expected prefix_expr
